--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "svelte-starter",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev --port 3002",
+		"dev": "svelte-kit dev -- --open",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
@@ -32,6 +32,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource/akshar": "^4.5.1",
+		"@fontsource/fira-mono": "^4.5.8",
+		"@fontsource/work-sans": "^4.5.10",
 		"node-sass": "^7.0.1"
 	}
 }
